# time-traveling-debugger

./: .gitignore  AGENTS.md  README.md  Tailored Engineering Standards for Senior Project.md  testDebugger.txt
CLITest/: README.md  pyviewer  pyviewer.c  sample.py
TestingFiles/: ShortTest.py  Test.py  demo_walkthrough.sh
python-debugger/: AUTOCOMPLETE_REFERENCE.md  BREAKPOINTS_GUIDE.md  BREAKPOINT_GUIDE.md  BUGFIX_TAB_PERMISSION.md  BUG_FIXES.md  CHANGES_SUMMARY.md  CLI_CONSISTENCY_UPDATE.md  CLI_ENHANCEMENTS.md  COMPATIBILITY.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SUMMARY.md  FILE_MANIFEST.md  FILTERING_GUIDE.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  IDEBUG_QUICKSTART.md  IMPROVEMENTS.md  INDEX.md  INSTALL_READLINE.md  INTEGRATION_GUIDE.md  INTERACTIVE_DEBUGGER_GUIDE.md  LOOP_TESTING_GUIDE.md  LOOP_TESTS_QUICKSTART.md  MASTER_FIX_SUMMARY.md  Makefile  NEW_FEATURES_QUICKREF.md  POST_CLI_BREAKPOINTS.md  POST_CLI_FINAL_FIXES.md  POST_CLI_READLINE_FIX.md  POST_CLI_UPDATE.md  PROJECT_STRUCTURE.md  PROMPT_IMPROVEMENT.md  QUICKSTART.md  QUICKSTART_BUILD.md  QUICK_FIX_REFERENCE.md  README.md  REBUILD_TEST_GUIDE.md  SHOW_COMMAND_FIX.md  START_HERE.md  (+33 more)
