[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-traveling-debugger"
version = "1.0.0"
description = "C-based Python debugger with trace generation"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["idebug"]
ext-modules = [
    { name = "cdebugger", sources = ["debugger.c"], extra-compile-args = ["-O3"] }
]
